# grok-interpreter

./: DOWNLOAD_INSTRUCTIONS.md  Dockerfile  GROK_CURSOR_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  UI_README.md  demo_usage.py  pyproject.toml  requirements.txt  simple_integration_test.py  test_grok_cursor_integration.py
backend/: requirements.txt  server.py
desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
desktop/electron/: main.js  preload.js
desktop/src/: main.tsx
desktop/src/ui/: App.tsx  SessionBar.tsx
installers/: oi-linux-installer.sh  oi-mac-installer.sh  oi-windows-installer.ps1
interpreter/: __init__.py
interpreter/computer_use/: loop.py
interpreter/core/: core.py  grok_cursor_workflow.py
interpreter/core/computer/browser/: browser.py
interpreter/core/computer/utils/: html_to_png_base64.py
interpreter/core/cursor/: __init__.py  cursor_client.py
interpreter/core/llm/: llm.py
interpreter/core/utils/: lazy_import.py  system_debug_info.py  telemetry.py
interpreter/terminal_interface/: magic_commands.py  start_terminal_interface.py  terminal_interface.py
interpreter/terminal_interface/utils/: count_tokens.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  index.css
ui/src/components/Loading/: LoadingScreen.js
ui/src/components/Sidebar/: Sidebar.js
ui/src/components/TopBar/: TopBar.js
ui/src/contexts/: AppContext.js  SocketContext.js
ui/src/pages/ChatInterface/: ChatInterface.js
ui/src/pages/Dashboard/: Dashboard.js
ui/src/pages/ModelConfiguration/: ModelConfiguration.js
ui/src/pages/ProjectBrowser/: ProjectBrowser.js
ui/src/pages/ProjectWizard/: ProjectWizard.js
ui/src/pages/Settings/: Settings.js
ui/src/pages/WorkspaceManager/: WorkspaceManager.js
